--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.0.2",
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
