--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express-rate-limit": "^7.0.2",
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1"
   }
 }
